; ModuleID = '/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_create.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@default_error_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @secp256k1_context_create(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @secp256k1_context_preallocated_size(i32 %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @checked_malloc(i32* @default_error_callback, i64 %8)
  %10 = inttoptr i64 %9 to i32*
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32* @secp256k1_context_preallocated_create(i32* %11, i32 %12)
  %14 = icmp eq i32* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i64 @EXPECT(i32 %15, i32 0)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %1
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @free(i32* %19)
  store i32* null, i32** %2, align 8
  br label %23

21:                                               ; preds = %1
  %22 = load i32*, i32** %5, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %21, %18
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i64 @secp256k1_context_preallocated_size(i32) #1

declare dso_local i64 @checked_malloc(i32*, i64) #1

declare dso_local i64 @EXPECT(i32, i32) #1

declare dso_local i32* @secp256k1_context_preallocated_create(i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
